openldap/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: openldap-gateway
  namespace: openldap-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8636
      name: ldap-ssl-port
      protocol: TCP
    hosts:
      - "*"
