openldap/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: openldap
  namespace: openldap-system
spec:
  hosts:
    - "*"
  gateways:
    - openldap-gateway
  tcp:
  - match:
    - port: 8636
    route:
    - destination:
        host: openldap-openldap-stack-ha.openldap-system.svc.cluster.local
        port:
          number: 389
